// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be black when hasNotBeenPressed and not show any content 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Cell
    beenPressed={false}
    col={3}
    hasBomb={true}
    neighbours={3}
    press={[Function]}
    row={3}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "",
      "name": "3-3",
      "onClick": [Function],
      "style": Object {
        "backgroundColor": "black",
        "border": "solid red 1px",
      },
    },
    "ref": null,
    "rendered": "",
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "",
        "name": "3-3",
        "onClick": [Function],
        "style": Object {
          "backgroundColor": "black",
          "border": "solid red 1px",
        },
      },
      "ref": null,
      "rendered": "",
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should be white when  beenPressed and not hasBomb 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Cell
    beenPressed={false}
    col={3}
    hasBomb={false}
    neighbours={3}
    press={[Function]}
    row={3}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "",
      "name": "3-3",
      "onClick": [Function],
      "style": Object {
        "backgroundColor": "black",
        "border": "solid red 1px",
      },
    },
    "ref": null,
    "rendered": "",
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "",
        "name": "3-3",
        "onClick": [Function],
        "style": Object {
          "backgroundColor": "black",
          "border": "solid red 1px",
        },
      },
      "ref": null,
      "rendered": "",
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should be white when  beenPressed and not hasBomb 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Cell
    beenPressed={true}
    col={3}
    hasBomb={false}
    neighbours={3}
    press={[Function]}
    row={3}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": 3,
      "name": "3-3",
      "onClick": [Function],
      "style": Object {
        "backgroundColor": "white",
        "border": "solid black 1px",
      },
    },
    "ref": null,
    "rendered": 3,
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": 3,
        "name": "3-3",
        "onClick": [Function],
        "style": Object {
          "backgroundColor": "white",
          "border": "solid black 1px",
        },
      },
      "ref": null,
      "rendered": 3,
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should show neighbours when beenPressed 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Cell
    beenPressed={false}
    col={3}
    hasBomb={true}
    neighbours={3}
    press={[Function]}
    row={3}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "",
      "name": "3-3",
      "onClick": [Function],
      "style": Object {
        "backgroundColor": "black",
        "border": "solid red 1px",
      },
    },
    "ref": null,
    "rendered": "",
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "",
        "name": "3-3",
        "onClick": [Function],
        "style": Object {
          "backgroundColor": "black",
          "border": "solid red 1px",
        },
      },
      "ref": null,
      "rendered": "",
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should show neighbours when beenPressed 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Cell
    beenPressed={true}
    col={3}
    hasBomb={false}
    neighbours={3}
    press={[Function]}
    row={3}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": 3,
      "name": "3-3",
      "onClick": [Function],
      "style": Object {
        "backgroundColor": "white",
        "border": "solid black 1px",
      },
    },
    "ref": null,
    "rendered": 3,
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": 3,
        "name": "3-3",
        "onClick": [Function],
        "style": Object {
          "backgroundColor": "white",
          "border": "solid black 1px",
        },
      },
      "ref": null,
      "rendered": 3,
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should show switch to red when been pressed and hasBomb is true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Cell
    beenPressed={false}
    col={3}
    hasBomb={true}
    neighbours={3}
    press={[Function]}
    row={3}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "",
      "name": "3-3",
      "onClick": [Function],
      "style": Object {
        "backgroundColor": "black",
        "border": "solid red 1px",
      },
    },
    "ref": null,
    "rendered": "",
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "",
        "name": "3-3",
        "onClick": [Function],
        "style": Object {
          "backgroundColor": "black",
          "border": "solid red 1px",
        },
      },
      "ref": null,
      "rendered": "",
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should show switch to red when been pressed and hasBomb is true 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Cell
    beenPressed={true}
    col={3}
    hasBomb={true}
    neighbours={3}
    press={[Function]}
    row={3}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": 3,
      "name": "3-3",
      "onClick": [Function],
      "style": Object {
        "backgroundColor": "red",
        "border": "solid red 1px",
      },
    },
    "ref": null,
    "rendered": 3,
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": 3,
        "name": "3-3",
        "onClick": [Function],
        "style": Object {
          "backgroundColor": "red",
          "border": "solid red 1px",
        },
      },
      "ref": null,
      "rendered": 3,
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
